--- a/app/templates/idea/timeline.html
+++ b/app/templates/idea/timeline.html
@@ -16,7 +16,7 @@
         </button>
     </p>
   </header>
-  <section class="modal-card-body has-text-centered">
+  <section id="timeline-content" class="modal-card-body has-text-centered">
   
   </section>
 </div>
