--- a/app/templates/idea/timeline.html
+++ b/app/templates/idea/timeline.html
@@ -17,72 +17,73 @@
     </p>
   </header>
   <section id="timeline-content" class="modal-card-body has-text-centered">
-  {% for e in idea.get_timeline()[::-1] %}
+  {% for e in idea.events[::-1] %}
+  {% set payload = e.payload %}
   <div>
-    {% if e["func"] == "sP" %}
+    {% if payload["func"] == "sP" %}
       <span class='icon'><i class='fa-solid fa-user-tie'></i></span>
       <span class='text'>Permit Set</span>
-      <p>permit: {{e["permitName"]}}</p>
-      <p>affected: {{e["account"]}}</p>
-      <p>new state: {{e["newState"]}}</p>
-    {% elif e["func"] == "sB" %}
+      <p>permit: {{payload["permitName"]}}</p>
+      <p>affected: {{payload["account"]}}</p>
+      <p>new state: {{payload["newState"]}}</p>
+    {% elif payload["func"] == "sB" %}
       <span class='icon'><i class='fa-solid fa-user-tie'></i></span>
       <span class='text'>Base Permit Set</span>
-      <p>permit: {{e["permitName"]}}</p>
-      <p>new state: {{e["newState"]}}</p>
-    {% elif e["func"] == "sNS" %}
+      <p>permit: {{payload["permitName"]}}</p>
+      <p>new state: {{payload["newState"]}}</p>
+    {% elif payload["func"] == "sNS" %}
       <span class='icon'><i class='fa-solid fa-users'></i></span>
       <span class='text'>Non Shard Holder State Set</span>
-      <p>new state: {{e["newState"]}}</p>
-    {% elif e["func"] == "iD" %}
+      <p>new state: {{payload["newState"]}}</p>
+    {% elif payload["func"] == "iD" %}
       <span class='icon'><i class='fa-solid fa-money-check-dollar'></i></span>
       <span class='text'>Dividend Issued</span>
-      <p>from: {{e["bankName"]}}</p>
-      <p>token address: {{e["tokenAddress"]}}</p>
-      <p>value: {{e["value"]}}</p>
-    {% elif e["func"] == "dD" %}
+      <p>from: {{payload["bankName"]}}</p>
+      <p>token address: {{payload["tokenAddress"]}}</p>
+      <p>value: {{payload["value"]}}</p>
+    {% elif payload["func"] == "dD" %}
       <span class='icon'><i class='fa-solid fa-coins'></i></span>
       <span class='text'>Dividend Dissolved</span>
-      <p>dividend id: {{e["dividend"]}}</p>
-      <p>value dissolved: {{e["dividendValue"]}}</p>
-    {% elif e["func"] == "cD" %}
+      <p>dividend id: {{payload["dividend"]}}</p>
+      <p>value dissolved: {{payload["dividendValue"]}}</p>
+    {% elif payload["func"] == "cD" %}
       <span class='icon'><i class='fa-solid fa-cake-slice'></i></span>
       <span class='text'>Dividend Claimed</span>
-      <p>dividend id: {{e["dividend"]}}</p>
-      <p>claimed value: {{e["dividendValue"]}}</p>
-    {% elif e["func"] in ["cB","aA","rA"] %}
-      {% if e["func"] == "cB" %}
+      <p>dividend id: {{payload["dividend"]}}</p>
+      <p>claimed value: {{payload["dividendValue"]}}</p>
+    {% elif payload["func"] in ["cB","aA","rA"] %}
+      {% if payload["func"] == "cB" %}
         <span class='icon'><i class='fa-solid fa-building-columns'></i></span>
         <span class='text'>Bank Created</span>
-      {% elif e["func"] == "aA" %}
+      {% elif payload["func"] == "aA" %}
         <span class='icon'><i class='fa-solid fa-chess-king'></i></span>
         <span class='text'>Bank Admin Added</span>
-      {% elif e["func"] == "rA" %}
+      {% elif payload["func"] == "rA" %}
         <span class='icon'><i class='fa-solid fa-person-circle-xmark'></i></span>
         <span class='text'>Bank Admin Removed</span>
       {% endif %}
-      <p>bank: {{e["bankName"]}}</p>
-      <p>affected: {{e["bankAdmin"]}}</p>
-    {% elif e["func"] == "dB" %}
+      <p>bank: {{payload["bankName"]}}</p>
+      <p>affected: {{payload["bankAdmin"]}}</p>
+    {% elif payload["func"] == "dB" %}
       <span class='icon'><i class='fa-solid fa-building-columns'></i></span>
       <span class='text'>Bank Deleted</span>
-      <p>name: {{e["bankName"]}}</p>
-    {% elif e["func"] == "tT" %}
+      <p>name: {{payload["bankName"]}}</p>
+    {% elif payload["func"] == "tT" %}
       <span class='icon'><i class='fa-solid fa-money-bill-transfer'></i></span>
       <span class='text'>Token Transferred</span>
-      <p>bank: {{e["bankName"]}}</p>
-      <p>token address: {{e["tokenAddress"]}}</p>
-      <p>value: {{e["value"]}}</p>
-      <p>to: {{e["to"]}}</p>
-    {% elif e["func"] == "mT" %}
+      <p>bank: {{payload["bankName"]}}</p>
+      <p>token address: {{payload["tokenAddress"]}}</p>
+      <p>value: {{payload["value"]}}</p>
+      <p>to: {{payload["to"]}}</p>
+    {% elif payload["func"] == "mT" %}
       <span class='icon'><i class='fa-solid fa-building-columns'></i></span>
       <span class='text'>Token Moved</span>
-      <p>from: {{e["fromBankName"]}}</p>
-      <p>to: {{e["toBankName"]}}</p>
-      <p>token address: {{e["tokenAddress"]}}</p>
-      <p>value: {{e["value"]}}</p>
+      <p>from: {{payload["fromBankName"]}}</p>
+      <p>to: {{payload["toBankName"]}}</p>
+      <p>token address: {{payload["tokenAddress"]}}</p>
+      <p>value: {{payload["value"]}}</p>
     {% endif %}
-    <p>by: {{e["by"]}}</p>
+    <p>by: {{payload["by"]}}</p>
   </div>
   <br>
   {% endfor %}
