--- a/app/templates/idea/profile.html
+++ b/app/templates/idea/profile.html
@@ -366,17 +366,22 @@ load_add_members_js();
   });
 
   $(document).on('click', '#timeline-button', function(e) {
-      redirect({id:"idea-timeline"},"Edit idea", "/€"+handle+"/timeline/", changeToTimeline);
+      redirect({id:"idea-timeline"},"Idea Timeline", "/€"+handle+"/timeline/", changeToTimeline);
+      e.preventDefault();
+    });
+
+  $(document).on('click', '#ownership-button', function(e) {
+      redirect({id:"idea-ownership"},"Idea Ownership", "/€"+handle+"/timeline/", changeToOwnership);
       e.preventDefault();
     });
 
   $(document).on('click', '#edit-button', function(e) {
-    redirect({id:"edit-idea"},"Edit idea", "/€"+handle+"/edit/", changeToEdit);
+    redirect({id:"edit-idea"},"Edit Idea", "/€"+handle+"/edit/", changeToEdit);
     e.preventDefault();
   });
 
   $(document).on('click', '#members-button', function(e) {
-    redirect({id:"idea-members"},"idea members", "/€"+handle+"/members/", changeToMembers);
+    redirect({id:"idea-members"},"Idea Members", "/€"+handle+"/members/", changeToMembers);
     e.preventDefault();
   });
 
@@ -419,12 +424,22 @@ $(window).on("popstate", function() {
     changeToTimeline();
   }
 
+  else if (window.history.state.id == "idea-ownership") {
+    changeToOwnership();
+  }
+
 
 });
 
 function changeToTimeline() {
   $("#modal-box").append(`
     {% include "idea/timeline.html" %}`);
+  $(document.body).addClass('noscroll');
+}
+
+function changeToOwnership() {
+  $("#modal-box").append(`
+    {% include "idea/ownership.html" %}`);
   $(document.body).addClass('noscroll');
 }
 
@@ -466,15 +481,17 @@ function changeRoles() {
 
 
 {% if request.url_rule.endpoint == 'idea.edit' %}
-window.history.replaceState({id:"edit-idea"},"Edit idea", "/€{{idea.handle}}/edit/");
+window.history.replaceState({id:"edit-idea"},"Edit Idea", "/€{{idea.handle}}/edit/");
 {% elif request.url_rule.endpoint == 'idea.timeline' %}
 window.history.replaceState({id:"idea-timeline"},"Idea Timeline", "/€{{idea.handle}}/timeline/");
+{% elif request.url_rule.endpoint == 'idea.ownership' %}
+window.history.replaceState({id:"idea-timeline"},"Idea Ownership", "/€{{idea.handle}}/ownership/");
 {% elif request.url_rule.endpoint == 'idea.photo' %}
-window.history.replaceState({id:"idea-photo"},"Profile photo", "/€{{idea.handle}}/");
+window.history.replaceState({id:"idea-photo"},"Profile Photo", "/€{{idea.handle}}/");
 {% elif request.url_rule.endpoint == 'idea.add_members' %}
-window.history.replaceState({id:"idea-add-members"},"idea add members", "/€{{idea.handle}}/add-members/");
+window.history.replaceState({id:"idea-add-members"},"Idea Add Members", "/€{{idea.handle}}/add-members/");
 {% elif request.url_rule.endpoint == 'idea.roles' %}
-window.history.replaceState({id:"idea-add-roles"},"Idea add roles", "/€{{idea.handle}}/add-roles/");
+window.history.replaceState({id:"idea-add-roles"},"Idea Add Roles", "/€{{idea.handle}}/add-roles/");
 {% else %}
 window.history.replaceState({id:"idea-profile"},"Profile", "./");
 {% endif %}
