--- a/app/templates/idea/ownership.html
+++ b/app/templates/idea/ownership.html
@@ -17,7 +17,9 @@
     </p>
   </header>
   <section id="ownership-content" class="modal-card-body has-text-centered">
-  
+    <div>
+      <canvas id="myChart"></canvas>
+    </div>
   </section>
 </div>
 </div>
