update ownership works

--- a/app/templates/idea/ownership.html
+++ b/app/templates/idea/ownership.html
@@ -9,7 +9,7 @@
       </a>
       <p class="modal-card-title" id="header">Ownership of {{idea.name}}</p>
       <p class="control">
-        <button class="button loading-button is-info is-normal is-rounded" id="reload-ownership">
+        <button class="button is-info is-normal is-rounded" id="reload-ownership">
           <span class="icon is-small">
             <i class="fa fa-refresh"></i>
           </span>
@@ -17,9 +17,7 @@
     </p>
   </header>
   <section id="ownership-content" class="modal-card-body has-text-centered">
-    <div>
       <canvas id="myChart"></canvas>
-    </div>
   </section>
 </div>
 </div>
