--- a/app/templates/idea/timeline.html
+++ b/app/templates/idea/timeline.html
@@ -9,7 +9,7 @@
       </a>
       <p class="modal-card-title" id="header">Timeline of {{idea.name}}</p>
       <p class="control">
-        <button class="button loading-button is-info is-normal is-rounded" id="reload-timeline">
+        <button class="button is-info is-normal is-rounded" id="reload-timeline">
           <span class="icon is-small">
             <i class="fa fa-refresh"></i>
           </span>
