--- a/app/templates/idea/key-info.html
+++ b/app/templates/idea/key-info.html
@@ -1,5 +1,5 @@
 <div id="key-info" class="container">
   <div id="ownership-button" class="key-info-tab is-info" style="color: white;"><span class="icon is-small"><i class="fa-solid fa-chart-pie"></i></span><span class="text">Ownership</span></div>
-  <div class="key-info-tab is-info" style="color: white;"><span class="icon"><i class="fa-solid fa-sitemap"></i></span><span class="text">Structure</span></div>
+  <div id="structure-button" class="key-info-tab is-info" style="color: white;"><span class="icon"><i class="fa-solid fa-sitemap"></i></span><span class="text">Structure</span></div>
   <div id="timeline-button" class="key-info-tab is-info" style="color: white;"><span class="icon"><i class="fa-solid fa-timeline"></i></span><span class="text">Timeline</span></div>
 </div>
