--- a/app/templates/idea/profile.html
+++ b/app/templates/idea/profile.html
@@ -86,6 +86,8 @@
 {% include "idea/timeline.html" %}
 {% elif request.url_rule.endpoint == 'idea.ownership' %}
 {% include "idea/ownership.html" %}
+{% elif request.url_rule.endpoint == 'idea.structure' %}
+{% include "idea/structure.html" %}
 {% elif request.url_rule.endpoint == 'idea.add_members' %}
 {% include "profile/add-members.html" %}
 {% elif request.url_rule.endpoint == 'profile.add_roles' %}
@@ -108,7 +110,13 @@
 <link rel="stylesheet" href="/static/css/profile/add-roles.css">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
 
+<!-- For charts: -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<!-- For tree charts: -->
+<script src="https://cdn.jsdelivr.net/npm/treant-js@1.0.1/Treant.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/treant-js@1.0.1/vendor/raphael.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/treant-js@1.0.1/Treant.css"></script>
 
 <!-- Probably good for now to have this below-->
 <script src="/static/js/profile/profile.js"></script>
@@ -123,6 +131,7 @@
 
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 {% include "idea/load-ownership-chart.html" %}
+{% include "idea/load-structure-chart.html" %}
 <script type="text/javascript">
 
   var handle = "{{idea.handle}}";
@@ -382,6 +391,11 @@ load_add_members_js();
       e.preventDefault();
     });
 
+  $(document).on('click', '#structure-button', function(e) {
+      redirect({id:"idea-structure"},"Idea Structure", "/€"+handle+"/structure/", changeToStructure);
+      e.preventDefault();
+    });
+
   $(document).on('click', '#edit-button', function(e) {
     redirect({id:"edit-idea"},"Edit Idea", "/€"+handle+"/edit/", changeToEdit);
     e.preventDefault();
@@ -441,6 +455,10 @@ $(window).on("popstate", function() {
     changeToOwnership();
   }
 
+  else if (window.history.state.id == "idea-structure") {
+    changeToStructure();
+  }
+
 
 });
 
@@ -455,6 +473,13 @@ function changeToOwnership() {
     {% include "idea/ownership.html" %}`);
   $(document.body).addClass('noscroll');
   loadOwnershipChart();
+}
+
+function changeToStructure() {
+  $("#modal-box").append(`
+    {% include "idea/structure.html" %}`);
+  $(document.body).addClass('noscroll');
+  loadStructureChart();
 }
 
 function changeToEdit() {
@@ -500,6 +525,9 @@ window.history.replaceState({id:"idea-timeline"},"Idea Timeline", "/€{{idea.ha
 {% elif request.url_rule.endpoint == 'idea.ownership' %}
 window.history.replaceState({id:"idea-ownership"},"Idea Ownership", "/€{{idea.handle}}/ownership/");
   loadOwnershipChart();
+{% elif request.url_rule.endpoint == 'idea.structure' %}
+window.history.replaceState({id:"idea-structure"},"Idea Structure", "/€{{idea.handle}}/structure/");
+  loadStructureChart();
 {% elif request.url_rule.endpoint == 'idea.photo' %}
 window.history.replaceState({id:"idea-photo"},"Profile Photo", "/€{{idea.handle}}/");
 {% elif request.url_rule.endpoint == 'idea.add_members' %}
