--- a/app/templates/idea/structure.html
+++ b/app/templates/idea/structure.html
@@ -17,7 +17,24 @@
     </p>
   </header>
   <section id="structure-content" class="modal-card-body has-text-centered">
-    <div id="tree-simple" style="min-height: 300px;"> </div>
+    <div id="structure-tabs" class="tabs is-centered is-fullwidth" style="width:100%;">
+      <ul>
+        <li data-content="#banks-tab" class="is-active"><a>Banks</a></li>
+        <li data-content="#permits-tab"><a>Permits</a></li>
+        <li data-content="#dividends-tab"><a>Dividends</a></li>
+      </ul>
+    </div>
+    <div id="structure-tabs-content">
+    <div id="banks-tab" class="structure-tab-content">
+      Banks
+    </div>
+    <div id="permits-tab" class="structure-tab-content vanish">
+      Permits
+    </div>
+    <div id="dividends-tab" class="structure-tab-content vanish">
+      Dividends
+    </div>
+</div>
   </section>
 </div>
 </div>
