--- a/app/templates/idea/structure.html
+++ b/app/templates/idea/structure.html
@@ -26,13 +26,34 @@
     </div>
     <div id="structure-tabs-content">
     <div id="banks-tab" class="structure-tab-content">
-      Banks
+      <div class="select is-fullwidth">
+        <select>
+          <option>main</option>
+          <option>second</option>
+        </select>
+      </div>
     </div>
     <div id="permits-tab" class="structure-tab-content vanish">
-      Permits
+      <div class="select is-fullwidth">
+        <select>
+          <option>Implement Proposal</option>
+          <option>Issue Vote</option>
+          <option>Issue Dividend</option>
+          <option>Liquidize Entity</option>
+          <option>Manage Bank</option>
+          <option>Manage Acceptable Tokens</option>
+          <option>Set Non Shard Holder Status</option>
+        </select>
+      </div>
+      <br>
     </div>
     <div id="dividends-tab" class="structure-tab-content vanish">
-      Dividends
+      <span class="text" style="float:left;">#1</span>
+      <progress class="progress is-success" value="75" max="100" style="margin-bottom:0px;">75%</progress>
+      <span class="text" style="float:right;">75/100 ETH</span>
+      <span class="text" style="float:left;margin-top:15px;">#0</span>
+      <progress class="progress is-success" value="0" max="100" style="margin-bottom:0px;">0%</progress>
+      <span class="text" style="float:right;">0/100 USDC</span>
     </div>
 </div>
   </section>
