--- a/app/templates/idea/structure.html
+++ b/app/templates/idea/structure.html
@@ -36,13 +36,13 @@
     <div id="permits-tab" class="structure-tab-content vanish">
       <div class="select is-fullwidth">
         <select>
-          <option>Implement Proposal</option>
-          <option>Issue Vote</option>
-          <option>Issue Dividend</option>
+          <option>Implement Proposals</option>
+          <option>Issue Votes</option>
+          <option>Issue Shards</option>
           <option>Liquidize Entity</option>
-          <option>Manage Bank</option>
           <option>Manage Acceptable Tokens</option>
-          <option>Set Non Shard Holder Status</option>
+          <option>Manage Banks</option>
+          <option>Manage Dividends</option>
         </select>
       </div>
       <br>
