--- a/app/templates/idea/structure.html
+++ b/app/templates/idea/structure.html
@@ -22,6 +22,7 @@
         <li data-content="#banks-tab" class="is-active"><a>Banks</a></li>
         <li data-content="#permits-tab"><a>Permits</a></li>
         <li data-content="#dividends-tab"><a>Dividends</a></li>
+        <li data-content="#referendums-tab"><a>Referendums</a></li>
       </ul>
     </div>
     <div id="structure-tabs-content">
@@ -46,6 +47,17 @@
         </select>
       </div>
       <br>
+        <table class="table is-striped is-bordered is-fullwidth">
+          <tr><td>
+          <span class='icon'><i class='fa-solid fa-chess-king'></i></span>
+          <span class="text">Frederik (04x00de20d230d230)</span>
+          </td></tr>
+          <tr><td>
+          <span class='icon'><i class='fa-solid fa-chess-bishop'></i></span>
+          <span class="text">Theo (03x00fe40t2303d0)</span>
+          </td></tr>
+
+        </table>
     </div>
     <div id="dividends-tab" class="structure-tab-content vanish">
       <span class="text" style="float:left;">#1</span>
