one step closer...

--- a/app/templates/erc360/edit.html
+++ b/app/templates/erc360/edit.html
@@ -64,7 +64,7 @@
     <div id="location-settings">
       <div id="location">
         <h1><b>Location</b></h1>
-        <input class="input has-fixed-size" placeholder="Add your token's location" id="location-field" rows="2" {% if erc360.address %}value="{{ erc360.address }}"{% endif %}></input>
+        <input class="input has-fixed-size" placeholder="Add your token's location" id="location-field" rows="2" {% if erc360.location_address %}value="{{ erc360.location_address }}"{% endif %}></input>
         <div id="map">
         </div>
       </div>
