--- a/app/templates/erc360/tabs/tab1.html
+++ b/app/templates/erc360/tabs/tab1.html
@@ -1,8 +1,3 @@
-{% for collaborator in erc360.group.members %}
-      {% with profile=collaborator %}
-        {% include 'profile/mini-profile.html' %}
-        {% endwith %}
-      {% endfor %}
-{% if current_user in erc360.group.members and 'erc360.group.member_has_role(member=current_user, role_title="Master")' %}
-      <a id="members-button"><div class="add-specific-button"><span>Add member</span></div></a>
+{% if True %}
+<p> What... </p>
 {% endif %}
