--- a/app/templates/erc360/tabs/tab3.html
+++ b/app/templates/erc360/tabs/tab3.html
@@ -1,3 +1,3 @@
-{% if current_user in erc360.group.members %}
-      <div class="add-specific-button" id="add-comm-button"><span>Add comm</span></div>
+{% if True %}
+<p> What... </p>
 {% endif %}
