--- a/app/templates/erc360/tabs/tabs.html
+++ b/app/templates/erc360/tabs/tabs.html
@@ -1,3 +1,3 @@
-{% with tab1contentpath="erc360/tabs/tab1.html", tab2contentpath="erc360/tabs/tab2.html", tab3contentpath="erc360/tabs/tab3.html", tab1name="Contributors", tab2name="Roles", tab3name="Comms", tab1icon="fas fa-group", tab2icon="fab fa-black-tie", tab3icon="fas fa-wifi" %}
+{% with tab1contentpath="erc360/tabs/tab1.html", tab2contentpath="erc360/tabs/tab2.html", tab3contentpath="erc360/tabs/tab3.html", tab1name="Contributors", tab2name="Permits", tab3name="Comms", tab1icon="fas fa-group", tab2icon="fa fa-id-card", tab3icon="fas fa-wifi" %}
 {% include "profile/tabs.html" %}
 {% endwith %}
