better looking permits

--- a/app/templates/erc360/tabs/tab2.html
+++ b/app/templates/erc360/tabs/tab2.html
@@ -1,5 +1,5 @@
-
-      
-{% if True %}
-<p> What... </p>
-{% endif %}
+{% for permit in erc360.permits %}
+	{% with title=permit.title, subtitle=permit.bytes.hex(), icon = "fa fa-id-card", id=permit.bytes.hex() %}
+	{% include 'extras/entity.html' %}
+	{% endwith %}
+{% endfor %}
